--- a/libft/Makefile
+++ b/libft/Makefile
@@ -50,6 +50,7 @@ _SOURCES_LIBFT		=	ft_isalnum.c \
 _SOURCES_MY_FUNCTIONS	=	ft_printf.c \
 							ft_print_ptr.c \
 							ft_print_unsigned.c \
+							ft_simple_utils.c \
 							get_next_line.c \
 							ft_strlen_int.c \
 							ft_strjoin_secure.c \
